# cookiecutter-data-science

./: .commitlintrc.json  .gitattributes  .gitignore  .mega-linter.yml  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  RELEASING.md  Taskfile.yml  azure-pipelines.yml  base.html  biome.json  ccds-help.json  ccds.json  cookiecutter.json  dev-requirements.txt  devenv.nix  docker-compose.yml  docker_clean_all.sh  environment.yml  flake.nix  index.html  netlify.toml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  sitemap.xml  temp.md  toc.html  welcome.txt
{{ cookiecutter.repo_name }}/: .cursorrules  .dockerignore  .editorconfig  .env  .envrc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.yaml  .pylintrc  .python-version  .readthedocs.yaml  .style.yapf  CHANGELOG.md  CITATION.cff  CNAME  Dockerfile  Dockerfile_mlflow  EXPERIMENTS.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  Taskfile.yml  _config.yml  _toc.yml  _toc_2.yml  cli.py  conda-requirements.txt  conf.py  default.nix  docker-compose.yml  dodo.py  dvc.yaml  environment.yml  flake.nix  (+25 more)
{{ cookiecutter.repo_name }}/.ccds-original/: README.md
{{ cookiecutter.repo_name }}/.cursor/: README.md
{{ cookiecutter.repo_name }}/.cursor/rules/: 000_project-description.mdc  001_project-description.mdc  002_cursor-rules.mdc  003_project-tooling.mdc  003_style.mdc  004_agent-memory.mdc  005_visual-artifacts.mdc  006_project-tooling.mdc  007_educational-hinting.mdc  100_general-style.mdc  101_heading-indices.mdc  101_python.mdc  102_functional-vs-oop.mdc  110_markdown.mdc  111_katex-math.mdc  113_markdown-enhanced-style.mdc  114_katex-reference.mdc  120_python.mdc  123_ml_pytorch.mdc  124_pyproject_uv.mdc  126_quality-assurance_ruff.mdc  129_pydantic_settings.mdc  130_version-control_git.mdc  131_ci-cd-github-actions.mdc  132_git-hooks-pre-commit.mdc  140_containerization.mdc  141_dev-containers.mdc  151_nix-flakes.mdc  160_cloud-services-aws.mdc  171_latex-math.mdc  173_katex-math-showing-work.mdc  174_latex-symbol-formatting.mdc  190_google-sheets.mdc  301_memory.mdc  303_note-taking.mdc  304_clear-concise.mdc  500_domains.mdc  510_game-theory.mdc  511_extensive-form-trees.mdc
{{ cookiecutter.repo_name }}/.devcontainer/: devcontainer.json  postCreateCommand.sh
{{ cookiecutter.repo_name }}/.devcontainer/py-dev/: devcontainer-feature.json  install.sh
{{ cookiecutter.repo_name }}/.dvc/: config
{{ cookiecutter.repo_name }}/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml  pull_request_template.md
{{ cookiecutter.repo_name }}/.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  02_FEATURE_REQUEST.md  03_CODEBASE_IMPROVEMENT.md  04_SUPPORT_QUESTION.md  bug_report.md  config.yml  feature_request.md  general_question.md
{{ cookiecutter.repo_name }}/.github/workflows/: checkCommits.sh  ci.yaml  lint.yml  main.yml  on-release-main.yml
{{ cookiecutter.repo_name }}/.obsidian/: .gitignore  appearance.json  backlink.json  community-plugins.json  core-plugins.json  webviewer.json  workspace.json
{{ cookiecutter.repo_name }}/.trunk/: trunk.yaml
{{ cookiecutter.repo_name }}/.trunk/configs/: .cspell.json  biome.json
{{ cookiecutter.repo_name }}/api/: main.py
{{ cookiecutter.repo_name }}/configs/: train.yaml
{{ cookiecutter.repo_name }}/data/: .gitignore
{{ cookiecutter.repo_name }}/docker/: {{ cookiecutter.repo_name }}.Dockerfile
{{ cookiecutter.repo_name }}/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  SECURITY.md  commands.rst  conf.py  getting-started.rst  index.md
{{ cookiecutter.repo_name }}/docs/mkdocs/: README.md  mkdocs.yml
{{ cookiecutter.repo_name }}/docs/sphinx/: commands.rst  conf.py  getting-started.rst
{{ cookiecutter.repo_name }}/dvc/: eval.dvc  process_data.dvc
{{ cookiecutter.repo_name }}/homebrew/Formula/: {{ cookiecutter.repo_name }}.rb
{{ cookiecutter.repo_name }}/notebooks/: .dockerignore  .nbautoexport  0.01_gatlen_example.ipynb  0.01_{{ cookiecutter.author_name }}_example.ipynb  01_name_example.ipynb  10-ExploratoryDataAnalysis.ipynb  20-PandasPipes.ipynb  25_SQLInNotebooks.ipynb  Dockerfile  README.md  Readme.md  generate_token.py  jupyter_notebook_config.py  markdown-notebooks.md  notebook_template.ipynb  pipeline.ipynb  requirements.txt  tdab_ds_notebook_template.ipynb  template.ipynb
{{ cookiecutter.repo_name }}/notebooks/sandbox/: README.md
{{ cookiecutter.repo_name }}/notebooks/templates/: initial_template.ipynb
{{ cookiecutter.repo_name }}/pipelines/: configs.py  install_requirements.py  pipeline-full.py  pipeline-sample.py
{{ cookiecutter.repo_name }}/reports/master/: LabNotebook.rmd  Report.rmd
{{ cookiecutter.repo_name }}/reports/pdf/: LabNotebook.docx  LabNotebook.html
{{ cookiecutter.repo_name }}/reports/rmd/: Daily.rmd  changelog.rmd  experiments.rmd  information.rmd  meetings.rmd  papers-analysis.rmd  (+3 more)
{{ cookiecutter.repo_name }}/sample_project/: data_preprocess.py
{{ cookiecutter.repo_name }}/scripts/: setup.sh
{{ cookiecutter.repo_name }}/secrets/: .gitignore
{{ cookiecutter.repo_name }}/src/: .gitignore  __about__.py  __init__.py  inference_flow.py  main.py  make_dataset.py  pipeline.py  reports.py  utils.py  {{cookiecutter.project_name}}_pipeline.py
{{ cookiecutter.repo_name }}/tests/: __init__.py  conftest.py  contenxt.py  test_basic.py  test_data_validation.py  test_feature_engineering.py  test_main.py  test_make_data.py  test_model_testing.py  test_model_training.py  test_pipeline.py  test_train_data.py  test_{{cookiecutter.project_slug}}.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: __init__.py  config.py  dataset.py  features.py  plots.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/: __init__.py  {{ cookiecutter.project_slug }}.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/: __init__.py  __main__.py  command_line.py  main.py  requirements.txt  settings.py
{{ cookiecutter.repo_name }}/{{cookiecutter.project_slug}}/: cli.py
(+344 files in other folders)
